# Labs

./: .gitignore  README.md
Course 1/: .gitignore
Course 1/Fundamentals of algorithmization and programming (OAIP)m/: PraktikumOAP-2chast2021_4.doc  ПрактикумОАП-1сем2016v2.doc
Course 1/Numerical methods (ЧМ)/: README.md
Course 1/Software-engineering (КПО)/: README.md
Course 1/Алгоритмы и структуры данных/: Algoritmy_i_struktury_dannykh_Lektsia_7_Rekursia.pptx
Course 1/Компьютерные языки разметки/: README.md
Course 1/Ксис/: 7_GLAVA_KOMP_YuTERNYE_SISTEMY_I_SETI_praktikum (3).docx
Course 3/Term 2/Machine learning methods/02/: 1.ipynb  pyproject.toml  smartwatches.csv
Course 3/Term 2/Machine learning methods/03/: 1.ipynb  answers.md  pyproject.toml
Course 3/Term 2/Machine learning methods/05/: 1.ipynb  pyproject.toml
Course 4/Designing Internet systems/: Lab1.docx  Lab2.docx  Lab3.docx  Lab4.docx  lab5.docx  lab6.docx  lab7.docx  ПИС 1_1.docx  ПИС7.drawio  (+2 more)
Course 4/Distributed and Cloud Systems/04.05.06 Распределенная служба обмена информацией/Central service/: Dockerfile  docker-compose.yaml  pyproject.toml
Course 4/Distributed and Cloud Systems/04.05.06 Распределенная служба обмена информацией/Central service/alembic/: env.py
Course 4/Distributed and Cloud Systems/04.05.06 Распределенная служба обмена информацией/Central service/src/app/: config.py  dependencies.py  main.py
Course 4/Distributed and Cloud Systems/04.05.06 Распределенная служба обмена информацией/Central service/src/app/routers/: BODI_router.py
Course 4/Distributed and Cloud Systems/04.05.06 Распределенная служба обмена информацией/Central service/src/domain/: entities.py
Course 4/Distributed and Cloud Systems/04.05.06 Распределенная служба обмена информацией/Central service/src/gateways/database/: BODI_repository.py  models.py
Course 4/Distributed and Cloud Systems/04.05.06 Распределенная служба обмена информацией/Central service/src/use_cases/: BODI_service.py  pull_replication_service.py  push_replication_service.py  time_sync.py
(+2862 files in other folders)
