[tool.poetry]
name = "central service"
version = "0.1.0"
description = ""
authors = ["hamster <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
httpx = "^0.27.2"
uvicorn = "^0.31.1"
pydantic-settings = "^2.5.2"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
